# Entropy-aware-branching

./: README.md  pyproject.toml  run.py  shell.nix
entropix/: PRM.py  config.py  dashboard.py  kvcache.py  metrics.py  model.py  plot.py  sampler.py  server.py  tokenizer.py
entropix/models/: __init__.py  download_weights.py  llama.py  smollm.py
